// ============================================================
// SCHÉMA PRISMA — Cinés Délices (version corrigée)
// ============================================================
// CORRECTIONS APPLIQUÉES :
//   1. Recipe → User : Cascade → SetNull (les recettes publiées
//      survivent à la suppression du compte membre)
//   2. Media.tmdbId : @unique → @@unique([tmdbId, type])
//      (un film et une série peuvent partager le même ID TMDB)
//   3. userId dans Recipe : String → String? (nullable pour SetNull)
// ============================================================

generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
    
}

// =====
// ENUMS
// =====

enum Role {
  MEMBER // membre standard : peut créer / soumettre ses recettes
  ADMIN // modérateur : publie ou refuse les recettes PENDING
  }

enum RecipeStatus {
  DRAFT
  PENDING
  PUBLISHED
}

enum MediaType {
  MOVIE
  SERIES
}

enum NotificationType {
  RECIPE_SUBMITTED
}

// ===================================
// USER - le membre ou l'admin du site
// ===================================
// Analogie : le chef du restaurant.
// S'il quitte le restaurant, ses plats au menu (PUBLISHED) restent,
// mais ses brouillons personnels (DRAFT/PENDING) peuvent être nettoyés
// côté applicatif avant la suppression du compte.
model User {
  id           String     @id @default(uuid())
  email        String     @unique
  nom          String?
  pseudo       String   @unique
  passwordHash String   @map("password_hash")
  role         Role     @default(MEMBER)
  createdAt    DateTime @default(now()) @map("created_at")
  
  lastLoginAt        DateTime? @map("last_login_at") // nouvelle colonne pour la dernière connexion
  resetToken         String?  // pour stocker le token de reset
  resetTokenExpires  DateTime?   // pour stocker l’expiration du token
  
  
  // Relations
  recipes       Recipe[]
  notifications Notification[]

  @@index([email])
  @@map("users")
}


// ==========================================================
// CATEGORY- type de recette (Entrée, Plat, Dessert, Boisson)
// ==========================================================
model Category {
  id          String  @id @default(uuid())
  nom         String  @unique
  description String?
  color       String?

  // Relations
  recipes Recipe[]

  @@map("categories")
}

// ===========================================
// GENRE - Genre media (horreur, comédie, etc)
// ===========================================
model Genre {
  id          String @id @default(uuid())
  nom         String
  tmdbGenreId Int    @unique @map("tmdb_genre_id")

  // Relations
  media MediaGenre[]

  @@map("genres")
}

// ==============================
// MEDIA_GENRE - table de liaison
// ==============================
// onDelete: Cascade sur les DEUX côtés = si on supprime un Media
// ou un Genre, les lignes de liaison disparaissent.
// C'est normal : une liaison n'a pas de sens sans ses deux parents.
model MediaGenre {
  mediaId String @map("media_id")
  genreId String @map("genre_id")

  // Relations
  media Media @relation(fields: [mediaId], references: [id], onDelete: Cascade)
  genre Genre @relation(fields: [genreId], references: [id], onDelete: Cascade)

  @@id([mediaId, genreId])
  @@map("media_genres")
}


// ====================================================
// MEDIA - Données Films ou Séries issues de l'API TMDB
// ====================================================
// On stocke le tmdbId pour resynchroniser sans dépendre
// de l'API à chaque affichage.
//
//  CORRECTION : tmdbId n'est plus @unique seul.
// Pourquoi ? Sur TMDB, un FILM et une SÉRIE peuvent avoir
// le même ID numérique (ex: id 2062 peut être un film ET une série).
// On utilise donc @@unique([tmdbId, type]) : la paire (id + type)
// est unique, mais pas l'id seul.
model Media {
  id          String    @id @default(uuid())
  tmdbId      Int       @map("tmdb_id") // ← @unique retiré ici
  titre       String
  slug        String    @unique // ex: "ratatouille-2007"
  type        MediaType
  posterUrl   String?   @map("poster_url")
  synopsis    String?
  annee       Int?
  createdAt   DateTime  @default(now()) @map("created_at")
  realisateur String?

  // Relations
  genres  MediaGenre[]
  recipes Recipe[]

  @@unique([tmdbId, type]) // ← contrainte composite : un tmdbId par type
  @@index([slug])
  @@index([type])
  @@map("media")
}

// =============================
// RECIPE - recettes de cuisine
// =============================
// ⚠️ CORRECTION MAJEURE : onDelete sur User passe de Cascade à SetNull.
//
// AVANT (dangereux) :
//   user User @relation(..., onDelete: Cascade)
//   → Suppression du compte = suppression de TOUTES les recettes
//     + effet domino sur RecipeIngredient et Notification
//
// APRÈS (sécurisé) :
//   user User? @relation(..., onDelete: SetNull)
//   → Suppression du compte = userId passe à null
//   → Les recettes PUBLISHED restent visibles
//   → Côté front : afficher "Ancien membre" si user === null
//
//  CÔTÉ APPLICATIF (dans le service de suppression de compte) :
//   1. Supprimer les recettes DRAFT et PENDING du membre (plus utiles)
//   2. Laisser Prisma mettre userId à null sur les PUBLISHED (SetNull)
//   3. Supprimer le User → les Notification partent (Cascade, OK RGPD)
model Recipe {
  id               String       @id @default(uuid())
  titre            String
  slug             String       @unique // ex: "ratatouille-de-remy"
  imageURL         String?      @map("image_url")
  instructions     String
  nombrePersonnes  Int?         @map("nombre_personnes")
  tempsPreparation Int?         @map("temps_preparation") // en minutes
  tempsCuisson     Int?         @map("temps_cuisson")     // en minutes
  status           RecipeStatus @default(DRAFT)
  rejectionReason  String?      @map("rejection_reason")
  adminEditedSinceSubmission Boolean @default(false) @map("admin_edited_since_submission")
  adminEditedIngredientsSinceSubmission Boolean @default(false) @map("admin_edited_ingredients_since_submission")
  adminEditedFieldsSummary String? @map("admin_edited_fields_summary")

  // FK
  userId     String? @map("user_id")    // ← String → String? (nullable pour SetNull)
  categoryId String  @map("category_id")
  mediaId    String  @map("media_id")

  createdAt DateTime @default(now()) @map("created_at")
  updatedAt DateTime @updatedAt       @map("updated_at")

  // Relations
  //  RÈGLES onDelete — résumé :
  // • User    → SetNull  : le compte part, la recette reste (userId → null)
  // • Category → Restrict : impossible de supprimer une catégorie utilisée
  // • Media   → Restrict : impossible de supprimer un film/série lié
  user        User?              @relation(fields: [userId],     references: [id], onDelete: SetNull)
  category    Category           @relation(fields: [categoryId], references: [id], onDelete: Restrict)
  media       Media              @relation(fields: [mediaId],    references: [id], onDelete: Restrict)
  ingredients RecipeIngredient[]
  notifications Notification[]

  @@index([slug])
  @@index([status])
  @@index([status, categoryId])
  @@index([userId])
  @@index([categoryId])
  @@index([mediaId])
  @@map("recipes")
}

// ===================================================
// RECIPE-INGEDIENTS - table de liaison avec attributs
// ===================================================
// • Si la recette est supprimée → la fiche part (Cascade)
// • Si l'ingrédient est utilisé → on ne peut pas le supprimer (Restrict)
model RecipeIngredient {
  recipeId     String @map("recipe_id")
  ingredientId String @map("ingredient_id")
  quantity     String?
  unit         String?

  // Relations
  recipe     Recipe     @relation(fields: [recipeId],     references: [id], onDelete: Cascade)
  ingredient Ingredient @relation(fields: [ingredientId], references: [id], onDelete: Restrict)

  @@id([recipeId, ingredientId])
  @@map("recipe_ingredients")
}


// ==========
// INGEDIENTS
// ==========
model Ingredient {
  id       String             @id @default(uuid())
  nom      String             @unique // normalisé côté applicatif (trim + lowercase)
  approved Boolean            @default(false)

  // Relations
  recipes RecipeIngredient[]

  @@index([nom])
  @@map("ingredients")
}

// ===============
// NOTIFICATIONS
// ===============
// • User supprimé → ses notifications partent (Cascade) → cohérent RGPD,
//   ce sont des données personnelles.
// • Recipe supprimée → la notif reste mais perd sa référence (SetNull) →
//   on peut toujours afficher "Une recette a été supprimée".
model Notification {
  id       String           @id @default(uuid())
  type     NotificationType
  message  String
  isRead   Boolean          @default(false) @map("is_read")

  userId   String           @map("user_id")
  recipeId String?          @map("recipe_id")

  createdAt DateTime        @default(now()) @map("created_at")

  user   User    @relation(fields: [userId], references: [id], onDelete: Cascade)
  recipe Recipe? @relation(fields: [recipeId], references: [id], onDelete: SetNull)

  @@index([userId, isRead])
  @@index([createdAt])
  @@map("notifications")
}
